--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   },
   "homepage": "https://github.com/SurgeryWebby/Web-FrontEnd#readme",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "file-loader": "^2.0.0",
     "next": "^7.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "semantic-ui-react": "^0.83.0"
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.83.0",
+    "url-loader": "^1.1.2"
   }
 }
