--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
         "es6": true,
         "commonjs": true
     },
+    "parser": "babel-eslint",
     "extends": "airbnb",
     "parserOptions": {
         "ecmaVersion": 9,
@@ -20,6 +21,10 @@
         "react/jsx-uses-vars": [
             2
         ],
-        "no-console": 0
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "react/jsx-indent": [2, 4],
+        "no-console": 0,
+        "indent": ["error", 4],
+        "max-len": ["error", { "code": 140 }]
     }
 }
