--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src --fix"
+    "lint": "eslint . --fix"
   },
   "repository": {
     "type": "git",
