--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "expect": "^23.6.0",
     "expect.js": "^0.3.1",
-    "mocha": "^5.2.0"
+    "jsdom": "^13.0.0",
+    "mocha": "^5.2.0",
+    "react-addons-test-utils": "^15.6.2"
   }
 }
