--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "npm run lint && next src",
     "build": "npm run lint && next build src",
     "start": "npm run lint && next build src && next start",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "test": "NODE_ENV=test mocha --recursive"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,6 @@
     "file-loader": "^2.0.0",
     "next": "^7.0.2",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2",
     "react-messenger-message-us": "^0.1.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
@@ -33,7 +33,11 @@
     "url-loader": "^1.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/register": "^7.0.0",
+    "acorn-jsx": "^5.0.1",
     "babel-eslint": "^10.0.1",
+    "chai": "^4.2.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "^5.9.0",
@@ -45,6 +49,8 @@
     "expect.js": "^0.3.1",
     "jsdom": "^13.0.0",
     "mocha": "^5.2.0",
-    "react-addons-test-utils": "^15.6.2"
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.6.3",
+    "sinon": "^7.1.1"
   }
 }
