--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run lint && next build src",
     "start": "npm run lint && next build src && next start",
     "lint": "eslint . --fix",
-    "test": "NODE_ENV=test mocha --recursive"
+    "test": "NODE_ENV=test mocha --opts ./test/lib/mocha.opts --recursive"
   },
   "repository": {
     "type": "git",
