--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run lint && next build src",
     "start": "npm run lint && next build src && next start",
     "lint": "eslint . --fix",
-    "test": "NODE_ENV=test mocha --opts ./test/lib/mocha.opts --recursive"
+    "test": "NODE_ENV=test mocha --opts ./test/lib/mocha.opts --recursive",
+    "coverage": "NODE_ENV=test nyc mocha --opts ./test/lib/mocha.opts --recursive"
   },
   "repository": {
     "type": "git",
@@ -47,8 +48,10 @@
     "eslint-plugin-react": "^7.11.1",
     "expect": "^23.6.0",
     "expect.js": "^0.3.1",
+    "istanbul": "^0.4.5",
     "jsdom": "^13.0.0",
     "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.6.3",
     "sinon": "^7.1.1"
