--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "npm run lint && next src",
     "build": "npm run lint && next build src",
     "start": "npm run lint && next build src && next start",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "export": "next export src",
+    "now-build": "next build src && next export src -o dist"
   },
   "repository": {
     "type": "git",
@@ -29,7 +31,6 @@
     "react-messenger-message-us": "^0.1.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
-    "styled-components": "^4.0.2",
     "url-loader": "^1.1.2"
   },
   "devDependencies": {
