--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "npm run lint && next build src && next start",
     "lint": "eslint . --fix",
     "test": "NODE_ENV=test mocha --opts ./test/lib/mocha.opts --recursive",
-    "coverage": "NODE_ENV=test nyc mocha --opts ./test/lib/mocha.opts --recursive",
+    "coverage": "nyc --reporter=html --reporter=text npm test",
     "export": "next export src",
     "now-build": "next build src && next export src -o dist"
   },
