--- a/now.json
+++ b/now.json
@@ -1,5 +1,10 @@
 {
-    "version": 2,
-    "name": "nextjs",
-    "builds": [{ "src": "package.json", "use": "@now/static-build" }]
-  }
+  "version": 2,
+  "name": "nextjs",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build"
+    }
+  ]
+}
