--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/SurgeryWebby/Web-FrontEnd.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "ppromsuban, minapapol",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/SurgeryWebby/Web-FrontEnd/issues"
