remove license to copyright

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "keywords": [],
   "author": "ppromsuban, minapapol",
-  "license": "ISC",
+  "license": "",
   "bugs": {
     "url": "https://github.com/SurgeryWebby/Web-FrontEnd/issues"
   },
