--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "test": "NODE_ENV=test mocha --opts ./test/lib/mocha.opts --recursive",
     "coverage": "nyc --reporter=html --reporter=text npm test",
     "export": "next export src",
-    "now-build": "next build src && next export src -o dist"
+    "now-build": "next build src && next export src -o ../dist"
   },
   "repository": {
     "type": "git",
