--- a/now.json
+++ b/now.json
@@ -1,10 +1,3 @@
 {
-  "version": 2,
-  "name": "surgery-webby",
-  "builds": [
-    {
-      "src": "client/package.json",
-      "use": "@now/static-build"
-    }
-  ]
+  "type": "static"
 }
