--- a/now.json
+++ b/now.json
@@ -1,3 +1,10 @@
 {
-  "type": "static"
+  "version": 2,
+  "name": "surgerywebby",
+  "builds": [
+    {
+      "src": "client/package.json",
+      "use": "@now/next"
+    }
+  ]
 }
