--- a/now.json
+++ b/now.json
@@ -6,5 +6,11 @@
       "src": "client/package.json",
       "use": "@now/next"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/client/$1"
+    }
   ]
 }
