--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npm run lint && next",
     "build": "npm run lint && next build",
-    "start": "npm run lint && next build && next start",
+    "start": "npm run build && next start",
     "lint": "eslint . --fix",
     "test": "NODE_ENV=test mocha --opts ./test/lib/mocha.opts --recursive",
     "coverage": "nyc --reporter=html --reporter=text npm test",
@@ -40,6 +40,7 @@
     "acorn-jsx": "^5.0.1",
     "babel-eslint": "^10.0.1",
     "chai": "^4.2.0",
+    "css-loader": "^1.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "^5.9.0",
@@ -54,6 +55,7 @@
     "nyc": "^13.1.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.6.3",
-    "sinon": "^7.1.1"
+    "sinon": "^7.1.1",
+    "style-loader": "^0.23.1"
   }
 }
