--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npm run lint && next",
     "build": "npm run lint && next build",
-    "start": "npm run lint && next build && next start",
+    "start": "npm run build && next start",
     "lint": "eslint . --fix",
     "test": "NODE_ENV=test mocha --opts ./test/lib/mocha.opts --recursive",
     "coverage": "nyc --reporter=html --reporter=text npm test",
