--- a/client/.gitignore
+++ b/client/.gitignore
@@ -66,3 +66,8 @@ typings/
 .DS_Store
 
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
