--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,14 @@
 version: 2
 jobs:
-  build:
-    docker:
-      - image: circleci/node:10.12.0
-    steps:
-      - checkout
-      - run: echo "A first Hello"
+  frontend-unit-test:
+    build:
+      docker:
+        - image: circleci/node:10.12.0
+      steps:
+        - checkout
+        - run: echo "A first Hello"
+workflows:
+  version: 2
+    frontend:
+      jobs:
+        - frontend-unit-test
