--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/node:10.12.0
     steps:
       - checkout
-      - run: echo "A first Hello"
+      - run: npm -v
 workflows:
   version: 2
   frontend:
