--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,13 @@ jobs:
       - run:
         name: Lint Frontend
         shell: /bin/bash
-        working_directory: ~/Web-FrontEnd/client
+        working_directory: ~/Web-FrontEnd
         command: npm run lint
         no_output_timeout: 5m
       - run:
         name: Frontend Unit Test
         shell: /bin/bash
-        working_directory: ~/Web-FrontEnd/client
+        working_directory: ~/Web-FrontEnd
         command: npm run test
         no_output_timeout: 5m
 workflows:
