--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,12 @@ jobs:
       - run:
           name: Lint Frontend
           shell: /bin/bash
-          working_directory: ~/Web-FrontEnd
+          working_directory: ~/Web-FrontEnd/client
           command: npm run lint
       - run:
           name: Frontend Unit Test
           shell: /bin/bash
-          working_directory: ~/Web-FrontEnd
+          working_directory: ~/Web-FrontEnd/client
           command: npm run test
 workflows:
   version: 2
