--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           name: Lint Frontend
           shell: /bin/bash
           working_directory: ~/Web-FrontEnd/client
-          command: npm run lint
+          command: ls
       - run:
           name: Frontend Unit Test
           shell: /bin/bash
